chore: fix AMP chore: better alignment migration routine on the front end - previously throwing some warnings ci: update AMP E2E test for new structure perf: more CSS code cleanup - down to 43.68KB

--- a/assets/scss/elements/navigation/_nav-menu.scss
+++ b/assets/scss/elements/navigation/_nav-menu.scss
@@ -29,12 +29,12 @@
 	padding: 10px 0;
 
 	&:hover, &:focus {
-	  > a {
+	  a {
 		text-decoration: none;
 	  }
 	}
 
-	a {
+	a, .has-caret {
 	  box-sizing: border-box;
 	  color: $body-color;
 	  width: 100%;
@@ -47,14 +47,6 @@
 		fill: currentColor;
 	  }
 	}
-  }
-
-  .amp-caret-wrap {
-	display: none;
-  }
-
-  .amp-desktop-caret-wrap {
-	display: block;
   }
 
   .sub-menu {
@@ -102,20 +94,11 @@
 	}
   }
 
-  .amp-caret-wrap {
-	z-index: 1000;
-	right: 0;
-	position: absolute;
-	top: 5px;
-
+  .caret-wrap {
 	svg {
-	  fill: currentColor;
-	  width: 1em
+	  width: 16px;
+	  height: 16px;
 	}
-  }
-
-  .amp-desktop-caret-wrap {
-	display: none;
   }
 }
 
@@ -128,20 +111,13 @@
 	fill: currentColor;
   }
 
-  .dropdown-open.caret-wrap > & svg {
+  .dropdown-open .caret svg {
 	transform: rotate(-180deg);
   }
 }
 
 .caret-wrap {
-  border-color: transparent;
-  font-size: .65em;
-  padding-left: 0;
   margin-left: 5px;
-}
-
-ul[id^="nv-primary-navigation"] .current-menu-item > a {
-  color: $link_hover_color;
 }
 
 .nv-nav-wrap {
@@ -152,7 +128,7 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 
 // Menus in sidebar.
 .header-menu-sidebar-inner {
-  .nav-ul .caret-wrap.dropdown-open + .sub-menu,
+  .nav-ul .dropdown-open + .sub-menu,
   .nav-ul .dropdown-open.sub-menu {
 	max-height: 2000px;
 	transition: all .3s ease;
@@ -173,6 +149,10 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 	  }
 	}
 
+	.has-caret a {
+	  width: auto;
+	}
+
 	.sub-menu {
 	  background-color: transparent;
 	}
@@ -180,7 +160,7 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 
   .mobile-center {
 	.nav-ul {
-	  li a {
+	  li a, .has-caret {
 		justify-content: center;
 	  }
 	}
@@ -188,7 +168,7 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 
   .mobile-left {
 	.nav-ul {
-	  li a {
+	  li a, .has-caret {
 		justify-content: flex-start;
 	  }
 	}
@@ -196,7 +176,7 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 
   .mobile-right {
 	.nav-ul {
-	  li a {
+	  li a, .has-caret {
 		justify-content: flex-end;
 	  }
 	}
@@ -217,13 +197,6 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 		width: 100%;
 		position: relative;
 	  }
-
-	  .caret-wrap {
-		svg {
-		  width: 16px;
-		  height: 16px;
-		}
-	  }
 	}
 
 	.sub-menu {
@@ -243,11 +216,22 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
   }
 }
 
+.amp-desktop-caret-wrap {
+  display: none;
+}
+
+.amp-caret-wrap {
+  svg {
+	fill: currentColor;
+	width: 1em
+  }
+}
+
 @mixin nav-menu--tablet-sm() {
   .header-menu-sidebar-inner {
 	.tablet-center {
 	  .nav-ul {
-		li a {
+		li a, .has-caret {
 		  justify-content: center;
 		}
 	  }
@@ -255,7 +239,7 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 
 	.tablet-left {
 	  .nav-ul {
-		li a {
+		li a, .has-caret {
 		  justify-content: flex-start;
 		}
 	  }
@@ -263,7 +247,7 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 
 	.tablet-right {
 	  .nav-ul {
-		li a {
+		li a, .has-caret {
 		  justify-content: flex-end;
 		}
 	  }
@@ -272,10 +256,17 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 }
 
 @mixin nav-menu--laptop() {
+  .amp-desktop-caret-wrap {
+	display: block;
+  }
+  .amp-caret-wrap {
+	display: none;
+  }
+
   .header-menu-sidebar-inner {
 	.desktop-center {
 	  .nav-ul {
-		li a {
+		li a, .has-caret {
 		  justify-content: center;
 		}
 	  }
@@ -283,7 +274,7 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 
 	.desktop-left {
 	  .nav-ul {
-		li a {
+		li a, .has-caret {
 		  justify-content: flex-start;
 		}
 	  }
@@ -291,10 +282,16 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 
 	.desktop-right {
 	  .nav-ul {
-		li a {
+		li a, .has-caret {
 		  justify-content: flex-end;
 		}
 	  }
+	}
+	.amp-desktop-caret-wrap {
+	  display: none;
+	}
+	.amp-caret-wrap {
+	  display: block;
 	}
   }
 }
